--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ flask-moment = "^1.0.5"
 flask-babel = "^2.0.0"
 langdetect = "^1.0.9"
 elasticsearch = "^8.5.0"
+gunicorn = "^20.1.0"
+psycopg2 = "^2.9.5"
 
 
 [build-system]
