--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ langdetect = "^1.0.9"
 elasticsearch = "^8.5.0"
 gunicorn = "^20.1.0"
 psycopg2 = "^2.9.5"
+rq = "^1.11.1"
+redis = "^4.3.4"
+flask-httpauth = "^4.7.0"
 
 
 [build-system]
