--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         - mysql
         - redis
       environment:
-        - SECRET_KEY=my-secret-key
+        - SECRET_KEY=${SECRET_KEY}
         - MAIL_SERVER=smtp.googlemail.com
         - MAIL_PORT=587
         - MAIL_USE_TLS=true
@@ -40,7 +40,7 @@ services:
         - redis
         - microblog
       environment:
-        - SECRET_KEY=my-secret-key
+        - SECRET_KEY=${SECRET_KEY}
         - MAIL_SERVER=smtp.googlemail.com
         - MAIL_PORT=587
         - MAIL_USE_TLS=true
@@ -66,8 +66,9 @@ services:
         - elastic
 
     elasticsearch:
-      container_name: elasticsearchs
+      container_name: elasticsearch
       image: docker.elastic.co/elasticsearch/elasticsearch:8.5.0
+      restart: always
       ports:
         - "9200:9200"
         - "9300:9300"
