--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ flask-migrate = "^3.1.0"
 flask-sqlalchemy = "^3.0.2"
 flask-login = "^0.6.2"
 email-validator = "^1.3.0"
-flask-mailman = "^0.3.0"
 pyjwt = "^2.6.0"
 flask-moment = "^1.0.5"
 flask-babel = "^2.0.0"
@@ -24,6 +23,9 @@ psycopg2 = "^2.9.5"
 rq = "^1.11.1"
 redis = "^4.3.4"
 flask-httpauth = "^4.7.0"
+sendgrid = "^6.9.7"
+pymysql = "^1.0.2"
+cryptography = "^39.0.2"
 
 
 [build-system]
