--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
 
     elasticsearch:
       container_name: elasticsearch
-      image: docker.elastic.co/elasticsearch/elasticsearch:8.5.0
+      image: elasticsearch:8.5.0
       restart: always
       ports:
         - "9200:9200"
@@ -76,6 +76,9 @@ services:
         - elastic
       environment:
         - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      volumes:
+        - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+
 
     mysql:
       container_name: mysql
