--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
     muse_me:
       build: .
       container_name: muse_me
-      ports:
-        - "8000:5000"
       networks:
         - elastic
       depends_on:
@@ -14,7 +12,6 @@ services:
       env_file:
         - .env
         - .flaskenv
-
 
     worker:
       build: .
@@ -30,6 +27,18 @@ services:
         - .env
         - .flaskenv
       entrypoint: venv/bin/rq worker --url redis://redis:6379/0 muse_me-tasks
+
+    nginx:
+      image: nginx:latest
+      container_name: nginx
+      ports:
+        - "8000:80"
+      volumes:
+        - ./nginx.conf:/etc/nginx/nginx.conf
+      depends_on:
+        - muse_me
+      networks:
+        - elastic
 
     redis:
       image: redis
