--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,8 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name 139.59.153.252;
+
 
         location / {
             proxy_pass http://muse_me:5000;
@@ -23,8 +24,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
         location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-            access_log        off;
-            log_not_found     off;
+            add_header Cache-Control "public, no-transform";
             expires           30d;
         }
 
