--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     muse_me:
       build: .
       container_name: muse_me
+      volumes:
+        - ./app/static:/app/static
       networks:
         - elastic
       depends_on:
@@ -32,9 +34,10 @@ services:
       image: nginx:latest
       container_name: nginx
       ports:
-        - "8000:80"
+        - "80:80"
       volumes:
         - ./nginx.conf:/etc/nginx/nginx.conf
+        - ./app/static:/app/static
       depends_on:
         - muse_me
       networks:
