--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       volumes:
         - ./nginx.conf:/etc/nginx/nginx.conf
         - ./app/static:/app/static
+        - /var/nginx_cache:/var/cache/nginx
+
       depends_on:
         - muse_me
       networks:
