--- a/nginx.conf
+++ b/nginx.conf
@@ -10,12 +10,18 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g
+                     inactive=60m use_temp_path=off;
+
     server {
         listen       80;
-        server_name 139.59.153.252;
-
+        server_name  139.59.153.252;
 
         location / {
+            try_files $uri $uri/ @flask;
+        }
+
+        location @flask {
             proxy_pass http://muse_me:5000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -23,10 +29,14 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-            add_header Cache-Control "public, no-transform";
-            expires           30d;
+
+        location /static/ {
+            root /app;
+            expires 1y;
+            add_header Cache-Control "public";
+            proxy_cache my_cache;
         }
+
 
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
