--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,8 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    client_max_body_size 10M;
+
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g
                      inactive=60m use_temp_path=off;
 
