--- a/nginx.conf
+++ b/nginx.conf
@@ -33,11 +33,12 @@ http {
         }
 
         location /static/ {
-            root /app;
+            root /home/muse_me/app;
             expires 1y;
             add_header Cache-Control "public";
             proxy_cache my_cache;
         }
+
 
 
         error_page   500 502 503 504  /50x.html;
